--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/Kerri-AnnBates/recipe-app#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "knex": "^0.20.4",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
